<resources>
    <string name="app_name">GroupStudy</string>

    <string name="action_settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="add">Add</string>
    <string name="title_activity_add_group">Start a group</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="class_label">Class</string>
    <string name="additional_information">Additional Information</string>
    <string name="title_activity_filter">Choose a filter</string>
    <string name="confirmFilters">Confirm</string>

    <!--Strings for spinner-->
    <string name="location_prompt">Choose a location</string>
    <string-array name="location_arrays">
        <item>Klaus</item>
        <item>Clough</item>
        <item>Library</item>
        <item>Tech Square</item>
    </string-array>

    <string name="classes_prompt">Pick a class</string>
    <string-array name="classes_array">
        <item>CS 2110</item>
        <item>CHEM 1212</item>
        <item>CHEM 1211</item>
        <item>CS 1331</item>
        <item>MATH 1100</item>
        <item>CS 2050</item>
        <item>ENGL 1101</item>
    </string-array>
</resources>
