<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="appathon.groupstudy.activities.addGroup"
    android:id="@+id/add_group">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <!--Title input box-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_textbox"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"/>

    <!--Class Label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/class_label"
        android:layout_marginTop="20dp"
        android:id="@+id/class_label"
        android:layout_below="@+id/title_textbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Class Text Box-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Location"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/class_choices" />

    <!--Dropdown for Locations-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/location_arrays"
        android:prompt="@string/location_prompt"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Additional info label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/additional_information"
        android:id="@+id/additional"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true" />

    <!--Additional info Textbox-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:id="@+id/additional_info_textbox"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/additional"/>

    <!--Drop Down for classes-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/class_choices"
        android:entries="@array/classes_array"
        android:prompt="@string/classes_prompt"
        android:layout_below="@+id/class_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
</ScrollView>